- changed some methods a little bit (added parameters) - completed some Test
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18743 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c