@@ -97,6 +97,7 @@ public class CustomInstructionTest {
 
     cis = new HashMap<>();
     aci = new AppliedCustomInstruction(startNode, endNodes,
+        Collections.<String>emptyList(), Collections.<String>emptyList(),
         Pair.of(Collections.<String> emptyList(), ""),
         SSAMap.emptySSAMap());
 
@@ -184,17 +185,17 @@ public class CustomInstructionTest {
     List<String> outputVars = new ArrayList<>();
     outputVars.add("var0");
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
-    Truth.assertThat(ci.getSignature()).isEqualTo("(var) -> (var0@1)");
+    Truth.assertThat(ci.getSignature()).isEqualTo("(|var|) -> (|var0@1|)");
 
     inputVars = new ArrayList<>();
-    inputVars.add("f::var1");
+    inputVars.add("var1");
     inputVars.add("var2");
     outputVars = new ArrayList<>();
     outputVars.add("var3");
-    outputVars.add("f::var4");
+    outputVars.add("var4");
     outputVars.add("var5");
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
-    Truth.assertThat(ci.getSignature()).isEqualTo("(|f::var1|, var2) -> (var3@1, |f::var4@1|, var5@1)");
+    Truth.assertThat(ci.getSignature()).isEqualTo("(|var1|, |var2|) -> (|var3@1|, |var4@1|, |var5@1|)");
   }
 
   @Test
@@ -209,16 +210,16 @@ public class CustomInstructionTest {
     ci = new CustomInstruction(null, null, inputVars, Collections.<String> emptyList(), ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(1);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(= var 0))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var| () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(= |var| 0))");
 
     List<String> outputVars = new ArrayList<>();
-    outputVars.add("f::var1");
+    outputVars.add("var1");
     ci = new CustomInstruction(null, null, Collections.<String> emptyList(), outputVars, ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(1);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |f::var1@1| () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool (= |f::var1@1| 0))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var1@1| () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool (= |var1@1| 0))");
 
     inputVars = new ArrayList<>();
     inputVars.add("var1");
@@ -227,26 +228,26 @@ public class CustomInstructionTest {
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(2);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1 () Int)");
-    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun var2@1 () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var1 0) (= var2@1 0)))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var1| () Int)");
+    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |var2@1| () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |var1| 0) (= |var2@1| 0)))");
 
     inputVars = new ArrayList<>();
     inputVars.add("var");
-    inputVars.add("f::var1");
+    inputVars.add("var1");
     inputVars.add("var2");
     outputVars = new ArrayList<>();
     outputVars.add("var3");
-    outputVars.add("f::var4");
+    outputVars.add("var4");
     ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(5);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)");
-    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |f::var1| () Int)");
-    Truth.assertThat(pair.getFirst().get(2)).isEqualTo("(declare-fun var2 () Int)");
-    Truth.assertThat(pair.getFirst().get(3)).isEqualTo("(declare-fun var3@1 () Int)");
-    Truth.assertThat(pair.getFirst().get(4)).isEqualTo("(declare-fun |f::var4@1| () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var 0)(and (= |f::var1| 0)(and (= var2 0)(and (= var3@1 0) (= |f::var4@1| 0))))))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var| () Int)");
+    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |var1| () Int)");
+    Truth.assertThat(pair.getFirst().get(2)).isEqualTo("(declare-fun |var2| () Int)");
+    Truth.assertThat(pair.getFirst().get(3)).isEqualTo("(declare-fun |var3@1| () Int)");
+    Truth.assertThat(pair.getFirst().get(4)).isEqualTo("(declare-fun |var4@1| () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |var| 0)(and (= |var1| 0)(and (= |var2| 0)(and (= |var3@1| 0) (= |var4@1| 0))))))");
   }
 
   @Test
@@ -331,6 +332,14 @@ public class CustomInstructionTest {
 
     aci = ci.inspectAppliedCustomInstruction(aciStartNode);
 
+    Collection<String> inputVars = new ArrayList<>();
+    inputVars.add("main::b");
+    Truth.assertThat(aci.getInputVariables()).containsExactlyElementsIn(inputVars);
+    Collection<String> outputVars = new ArrayList<>();
+    outputVars.add("main::a");
+    outputVars.add("main::b");
+    Truth.assertThat(aci.getOutputVariables()).containsExactlyElementsIn(outputVars);
+
     Pair<List<String>, String> pair = aci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(3);
     Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |main::b| () Int)");
@@ -350,5 +359,27 @@ public class CustomInstructionTest {
     aciNodes.add(aciStartNode);
     aciNodes.add(aciEndNode);
     Truth.assertThat(aci.getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
+  }
+
+  @Test
+  public void testGetInputVariables() throws IOException, ParserException, InterruptedException, NoSuchMethodException, SecurityException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+    Truth.assertThat(aci.getInputVariables()).isEmpty();
+
+    Collection<String> inputVariables = new ArrayList<>();
+    inputVariables.add("main::a");
+    aci = new AppliedCustomInstruction(startNode, endNodes, inputVariables, Collections.<String>emptyList(),
+        Pair.of(Collections.<String> emptyList(), ""), SSAMap.emptySSAMap());
+    Truth.assertThat(aci.getInputVariables()).containsExactly("main::a");
+  }
+
+  @Test
+  public void testGetOutputVariables() {
+    Truth.assertThat(aci.getOutputVariables()).isEmpty();
+
+    Collection<String> outputVariables = new ArrayList<>();
+    outputVariables.add("main::a");
+    aci = new AppliedCustomInstruction(startNode, endNodes, Collections.<String>emptyList(), outputVariables,
+        Pair.of(Collections.<String> emptyList(), ""), SSAMap.emptySSAMap());
+    Truth.assertThat(aci.getOutputVariables()).containsExactly("main::a");
   }
 }
